# ai-trading-system

./: .dockerignore  .env.development  .env.example  .gitignore  .pre-commit-config.yaml  API文档.md  ARCHITECTURE.md  DEPLOYMENT.md  DEVELOPMENT.md  Dockerfile  Makefile  README.md  TRADING_SOUL.md  USER_PROFILE.md  alembic.ini  check-dual-system.sh  check_syntax.py  deploy.sh  diagnose_system.py  docker-compose.hostnet.yml  docker-compose.yml  final_verification.sh  grafana-dashboard.json  health_check.sh  health_check_report.md  integrate_and_optimize.sh  integration_guide.py  mcp_bridge.py  openclaw-trading-backup.json  openclaw-trading.json  openclaw-trading.json.clobbered.2026-03-30T00-29-34-968Z  openclaw-trading.json.clobbered.2026-03-30T00-29-36-088Z  openclaw-trading.service  prepare_deployment.py  prometheus.yml  push_to_github.sh  pyproject.toml  quick-start.sh  quick_test.py  requirements.txt  (+50 more)
alembic/: env.py
config/: ai_brain.json  ai_experience.yaml  alert_rules.yml  backup_script.sh  clash_config.example.yaml  clash_config.yaml  config.local.example.yaml  config.yaml  config.yaml.bak.prod-switch-20260420-1452  data_sources.yaml  default.yml  logstash.conf  notification_channels.yml  nvidia_model_alias_expectations.json  openclaw.local.example.yml  openclaw.yml  production.yml  prometheus.yml  subscription.example.yaml  subscription.yaml  trading-host-sysctl.conf  trading_model_alias_expectations.json
data/: events.db-journal  sltp_migration_report_20260421-082434.json  stop_loss_orders.json.bak.20260421-073531  stop_loss_orders.json.bak.migrate-20260421-082434  strategy_optimization.json
deploy/: HOST_CLASH_EGRESS.md
deprecated_modules/: ai_memory_integration_README.txt  data_fusion_README.txt  data_fusion_deprecated_20260404.py  data_integration_README.txt  data_pipeline_README.txt  data_pipeline_deprecated_20260404.py  enhanced_memory_manager_README.txt  enhanced_memory_manager_deprecated_20260404.py  memory_manager_README.txt  memory_manager_deprecated_20260404.py  memory_migrator_README.txt  memory_migrator_deprecated_20260404.py  monitor_manager_README.txt  monitor_manager_deprecated_20260404.py  multi_source_data_fusion_README.txt  multi_source_data_fusion_deprecated_20260404.py  multi_strategy_framework_README.txt  strategy_optimizer_README.txt  strategy_optimizer_deprecated_20260404.py  system_monitor_README.txt  system_monitor_deprecated_20260404.py  unified_intelligent_memory_README.txt  unified_intelligent_memory_deprecated_20260404.py  资金管理模块_README.txt  资金管理模块_deprecated_20260404.py
devices/: paired.json
docs/: AI_HANDOFF_OPTIMIZATION_VERIFICATION_2026Q2.md  API_OPENAPI_FULL.json  CHANGELOG.md  (+53 more)
(+595 files in other folders)
